fixed alignment issue on button

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -72,7 +72,7 @@ body {
         font-size: .9em;
       }
       input[type=button] {
-        width: 10%;
+        width: 20%;
         padding: 12px 20px;
         margin:  0 auto;
         background-color: transparent;
